--- a/RCCM/Views/ExamResult/Index.cshtml
+++ b/RCCM/Views/ExamResult/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model List<ExamResultViewModel>
-
+@{
+    Layout = "_AdminLayout";
+}
 
 <h1 class="text-center mb-4">قائمة نتائج الاختبارات (@Model.Count())</h1>
 
