--- a/RCCM/Views/Home/Index.cshtml
+++ b/RCCM/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
 
             <!-- Second box  -->
             <div class="col-md-6 mb-3 d-flex justify-content-center align-items-center" style="height: 600px;">
-                <a asp-action="CandidateIndex" asp-controller="Candidate" class="text-center text-primary p-5 " style="width: 400px; font-size: 36px; text-shadow: 2px 2px #000000">
+                <a asp-action="index" asp-controller="Candidate" class="text-center text-primary p-5 " style="width: 400px; font-size: 36px; text-shadow: 2px 2px #000000">
                    
                     <span class="align-middle">المرشحين</span>
                 </a>
