--- a/RCCM/Views/ExamTypeConf/Add.cshtml
+++ b/RCCM/Views/ExamTypeConf/Add.cshtml
@@ -1,30 +1,42 @@
 ﻿@model AddExamTypeConfViewModel
 @{
     ViewData["Title"] = "Add Exam";
+    Layout = "_AdminLayout";
 }
 
-<h2>إضافة اختبار</h2>
+<div class="container my-4">
+    <h2 class="text-center mb-4">إضافة اختبار</h2>
 
-<form asp-action="AddExamTypeConf" method="post">
-    <div class="form-group">
-        <label asp-for="Title">عنوان الاختبار</label>
-        <input asp-for="Title" class="form-control form-text" />
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card shadow custom-card border-primary">
+                <div class="card-header bg-custom-primary text-white text-center">
+                    <h3>إضافة اختبار جديد</h3>
+                </div>
+                <div class="card-body custom-card-body">
+                    <form asp-action="AddExamTypeConf" method="post">
+                        <div class="mb-3">
+                            <label asp-for="Title" class="form-label">عنوان الاختبار</label>
+                            <input asp-for="Title" class="form-control" />
+                        </div>
+
+                        <div class="mb-3">
+                            <label asp-for="StartDate" class="form-label">بداية فترة الاختبار</label>
+                            <input asp-for="StartDate" type="date" class="form-control" value="@DateTime.Now.ToString("yyyy-MM-dd")" />
+                        </div>
+
+                        <div class="mb-4">
+                            <label asp-for="EndDate" class="form-label">نهاية فترة الاختبار</label>
+                            <input asp-for="EndDate" type="date" class="form-control" value="@DateTime.Now.ToString("yyyy-MM-dd")" />
+                        </div>
+
+                        <div class="d-flex justify-content-between mt-4">
+                            <button type="submit" class="btn btn-success">إضافة الاختبار</button>
+                            <a class="btn btn-primary" asp-action="Index">العودة لقائمة الاختبارات</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div class="form-group">
-        <label asp-for="StartDate">بداية فترة الاختبار</label>
-        <input asp-for="StartDate" type="date" value="@DateTime.Now" class="form-control form-text" />
-    </div>
-
-    <div class="form-group">
-        <label asp-for="EndDate">نهاية فترة الاختبار</label>
-        <input asp-for="EndDate" type="date" value="@DateTime.Now" class="form-control form-text" />
-    </div>
-
-
-    <div class="d-flex justify-content-evenly mt-5">
-        <button type="submit" class="btn btn-success">إضافة الاختبار</button>
-        <a class="text-decoration-none btn btn-primary" asp-action="Index">العودة لقائمة الصلاحيات</a>
-    </div>
-</form>
-
+</div>
