--- a/RCCM/Views/ExamTypeConf/Delete.cshtml
+++ b/RCCM/Views/ExamTypeConf/Delete.cshtml
@@ -1,16 +1,30 @@
-﻿@{
-    ViewData["Title"] = "Delete Candidate Status";
+﻿@model DeleteExamTypeConfViewModel
+@{
+    ViewData["Title"] = "Delete Exam";
+    Layout = "_AdminLayout";
 }
-@model DeleteExamTypeConfViewModel
 
-<h2>حذف الاختبار</h2>
+<div class="container my-4">
+    <h2 class="text-center mb-4">حذف الاختبار</h2>
 
-<form asp-action="DeleteExamTypeConf" method="post">
-    <p><strong>اسم الاختبار:</strong> @Model.Title</p>
-    <input type="hidden"  asp-for="ExamTypeConfId" />
-    <input type="hidden"  asp-for="Title" />
-    <div class="d-flex justify-content-evenly mt-5">
-        <button type="submit" class="btn btn-danger">حذف الاختبار</button>
-        <a class="text-decoration-none btn btn-primary" asp-action="Index">العودة لقائمة الصلاحية</a>
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow custom-card border-danger">
+                <div class="card-header bg-custom-primary text-white text-center">
+                    <h3>تأكيد حذف الاختبار</h3>
+                </div>
+                <div class="card-body custom-card-body">
+                    <form asp-action="DeleteExamTypeConf" method="post">
+                        <p><strong>اسم الاختبار:</strong> @Model.Title</p>
+                        <input type="hidden" asp-for="ExamTypeConfId" />
+                        <input type="hidden" asp-for="Title" />
+                        <div class="d-flex justify-content-between mt-4">
+                            <button type="submit" class="btn btn-danger">حذف الاختبار</button>
+                            <a class="btn btn-primary" asp-action="Index">العودة لقائمة الاختبارات</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-</form>
+</div>
