--- a/RCCM/Views/Shared/_Layout.cshtml
+++ b/RCCM/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿ <!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ar-sa" dir="rtl">
 <head>
     <meta charset="utf-8" />
@@ -19,51 +19,34 @@
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                 <img src="/LOGO.ico" width="270" height="75" alt="RCJY">
             </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">الرئيسية</a>
-                        </li>
-                        <li class="nav-item border-start mx-2"></li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Recruitment" asp-action="RecruitIndex">التوظيف</a>
-                        </li>
-                        <li class="nav-item border-start mx-2"></li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Candidate" asp-action="CandidateIndex">المرشحين</a>
-                        </li>
-                        <li class="nav-item border-start mx-2"></li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Interview" asp-action="InterviewIndex">المقابلات الشخصيه</a>
-                        </li>
-                
-                        <li class="nav-item border-start mx-2"></li>
-                        
-                        <!-- Uesr to Admin Button -->
-                
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Nationality" asp-action="Index">الجنسيات</a>
-                        </li>
-                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Grade" asp-action="Index">الدرجات الوظيفية</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CandidateStatus" asp-action="Index">الحالات</a>
-                        </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ExamTypeConf" asp-action="Index">الاختبارات</a>
-                        </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ExamResult" asp-action="Index">نتائج الاختبارات</a>
-                        </li>
-                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Interview" asp-action="Index">Interview </a>
-                        </li>
-                    </ul>
-                </nav>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">الرئيسية</a>
+                </li>
+                <li class="nav-item border-start mx-2"></li>
+                <li class="nav-item">
+                    <a class="nav-link text-white text-start" asp-area="" asp-controller="Candidate" asp-action="Index">المرشحين</a>
+                </li>
+                <li class="nav-item border-start mx-2"></li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" asp-area="" asp-controller="Recruitment" asp-action="RecruitIndex">التوظيف</a>
+                </li>
+                <li class="nav-item border-start mx-2"></li>
+                <li class="nav-item">
+                    <a class="nav-link text-white text-start" asp-area="" asp-controller="Interview" asp-action="Add">مقابلات</a>
+                </li>
+                <li class="nav-item border-start mx-2"></li>
+
+                <!-- Uesr to Admin Button -->
+
+                <li class="nav-item d-flex justify-content-end">
+                    <a class="btn btn-secondary text-white " asp-controller="User" asp-action="Index">Admin</a>
+            </ul>
+        </nav>
     </header>
 
 
