--- a/RCCM/wwwroot/css/site.css
+++ b/RCCM/wwwroot/css/site.css
@@ -122,3 +122,16 @@ footer {
         background-color: #061f4f;
         border-color: #061f4f;
     }
+#sidebar {
+    height: 97vh;
+}
+.nav {
+    display: flex;
+    flex-direction: column;
+}
+
+
+#sidebar .nav-link:hover {
+    color: #f8f9fa; /* Change to the desired hover color */
+    background-color: #184080; /* Change to the desired hover background color */
+}
